# BioRazer-Basics

./: .gitignore  README.md  extra_packages.txt  pyproject.toml  setup.sh  test
archive/single/: analyzer.py
archive/single/rosetta_analyzer/: __init__.py
archive/single/scripts/: specificity_anlaysis.py
archive/single/utils/: __init__.py  af_utils.py  progress.py  select_utils.py
biorazer/: cli.py  display.py  io.py  logger.py
biorazer/access/AFDB/: info.py  query.py
biorazer/access/RCSB/: files.py  info.py  query.py
biorazer/access/ensembl/: utils.py
biorazer/access/uniprot/: files.py  load.py  property.py  response.py  scripts.py  utils.py
biorazer/database/: amino_acid.py
biorazer/design/: __init__.py  basic.py  sequence.py
biorazer/design/basic/: __init__.py  _shared.py  entry.py  library.py  single_test.py
biorazer/sequence/: __init__.py  central_dogma.py  io.py
biorazer/sequence/protein/: __init__.py
biorazer/sequence/translation/: reverse.py
biorazer/structure/: __init__.py  editters.py  io.py
biorazer/structure/analyzers/: checkers.py  reporters.py  selectors.py
biorazer/structure/io/: __init__.py  organic.py  protein.py
biorazer/structure/md_traj/: __init__.py
biorazer/structure/multiple/: __init__.py  abstracts.py
biorazer/structure/operation/: annotation.py  composition.py
biorazer/structure/prediction/: boltz1_analyzer.py  chai1_analyzer.py
docs/: colabfold_msa.md  comparison_among_serveral_sequences.py
scripts/: build.py
src/biorazer/: display.py
tests/: conftest.py  test_colabfold_api.py
(+83 files in other folders)
