[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "biorazer"
description = "A platform for analyzing various biological information"
version = "0.4.3"
readme = "README.md"
packages = [
    { include = "src/biorazer" },
]

[tool.poetry.dependencies]
python ="^3.11"
biotite = "^1.4.0"
rcsbsearchapi = "^2.0.1"
tabulate = "^0.9.0"
scipy = "^1.16.1"
numpy = "^2.3.2"
