[build-system]
requires = ["poetry-core", "setuptools", "cython", "numpy"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "biorazer"
description = "A platform for analyzing various biological information"
version = "0.4.7"
readme = "README.md"
packages = [
    { include = "biorazer" },
]

[tool.poetry.dependencies]
python ="^3.11"
biotite = "^1.4.0"
rcsbsearchapi = "^2.0.1"
tabulate = "^0.9.0"
scipy = "^1.16.1"
numpy = "^2"
hydride = "^1.2.3"
umap-learn = "^0.5.9.post2"

[tool.poetry.dev.dependencies]
cython = "^0.29.0"

[tool.poetry.build]
script = "scripts/build.py"